2002-02-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (coderInfoList): Finally wrote some
 	documentation.

2002-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Options.cpp : Use DestroyImageList() rather than DestroyImage().

	* lib/Geometry.cpp (operator =): Use GetPageGeometry() rather than
 	PostscriptGeometry() to parse geometry specifications containing a
 	page size.

2002-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

       * Remove bogus cast of blob data in readImages().

2002-01-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (throwImageException): Throwing exceptions was
 	leaking memory.

	* lib/Exception.cpp (throwException): Throwing exceptions was
 	leaking memory.

	* lib/Image.cpp (replaceImage): Updated to properly handle
 	registration ids.
	(modifyImage): Updated to properly handle registration ids.

2002-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (Magick::DrawableGravity::print):
 	Bugfix. Remove "Gravity" from the end of each gravity
 	specification string.  Reported as PR#1084 by stefan@dotify.com.

2002-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp, Magick++/Include.h: Use DestroyImageList() rather
 	than DestroyImages().

2002-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Options.h (antiAlias): Bugfix, set
 	drawInfo->text_antialias to control text antialiasing.

2002-01-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Include.h : Imported new composition operators to
 	namespace: NoCompositeOp, DarkenCompositeOp, LightenCompositeOp,
 	HueCompositeOp, SaturateCompositeOp, ValueCompositeOp,
 	ColorizeCompositeOp, LuminizeCompositeOp, ScreenCompositeOp,
 	OverlayCompositeOp.

2001-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (strokePattern): New method to specify image to